---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Item = (identifier) @name
Collect = {(Item) @item}* @items
Test = (parent (Collect))
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "name"
S2 "item"
S3 "items"
S4 "Item"
S5 "Collect"
S6 "Test"
S7 "identifier"
S8 "parent"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { name }
T2 = Struct  M1:2  ; { name, item }
T3 = ArrayStar(T2)  ; T2*
T4 = Struct  M3:1  ; { items }

[type_members]
M0: S1 → T0  ; name: <Node>
M1: S1 → T0  ; name: <Node>
M2: S2 → T0  ; item: <Node>
M3: S3 → T3  ; items: T3

[type_names]
N0: S4 → T1  ; Item
N1: S5 → T4  ; Collect
N2: S6 → T4  ; Test

[entrypoints]
Collect = 09 :: T4
Item    = 01 :: T1
Test    = 16 :: T4

[transitions]
  00   ε                                    ◼

Item:
  01   ε                                    02
  02   ε   [Obj]                            04
  04  !!!  (identifier) [Node Set(M0)]      06
  06   ε   [EndObj]                         08
  08                                        ▶

Collect:
  09   ε                                    10
  10   ε   [Obj]                            12
  12   ε   [Arr]                            14
  14   ε                                    44, 32

Test:
  16   ε                                    17
  17   ε   [Obj]                            19
  19  !!!  (parent)                         20
  20   ▽   (Collect)                        21 ⯇
  21   △                                    22
  22   ε   [EndObj]                         24
  24                                        ▶
  25   ε   [EndObj Push]                    27
  27   ε                                    50, 32
  29                                        ▶
  30   ε   [EndObj]                         29
  32   ε   [EndArr Set(M3)]                 30
  34   ε   [Set(M2)]                        25
  36  !!!  (Item)                           34 ⯇
  37   ε   [Obj]                            36
  39   ▷                                    42
  40   ε                                    39, 32
  42   ε                                    37, 40
  44  !!!                                   42
  45   ▷                                    48
  46   ε                                    45, 32
  48   ε                                    37, 46
  50   ▷                                    48
